# othismo

./: .gitignore  Cargo.toml  JUSTFILE  README.md
othismo/: Cargo.toml
othismo-core/: Cargo.toml
othismo-core/src/: execution.rs  main.rs  prototype.rs
othismo-core/src/othismo/: image.rs  mod.rs
othismo-core/src/othismo/image/: tests.rs
othismo-core/src/solidarity/: image.rs  mod.rs
othismo-core/src/solidarity/image/: tests.rs
othismo-core/wat/: memory.wat
othismo/src/: execution.rs  main.rs
othismo/src/native_modules/: mod.rs
othismo/src/othismo/: execution.rs  executors.rs  image.rs  mod.rs  namespace.rs
othismo/wat/: globals.wat
prototype/: Cargo.toml
prototype/src/: abi.rs  lib.rs  tasks.rs
scripts/: cargo-dev
src/: execution.rs  main.rs
src/solidarity/: image.rs  mod.rs
src/solidarity/image/: tests.rs
src/sql_scripts/: create_image_schema.sql
thoughts/: runtime.md  tasks.md  web_server.md
wat/: globals.wat
