[package]
name = "solidarity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.13.0"
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = "1.0.215"
wasmbin = "0.8.1"
wasmer = "4.2.5"
